Modification des consignes dans le README