@@ -4,35 +4,46 @@ par **WASSON Baptiste, LAGACHE Kylian, AOULAD-TAYAB Karim**
 
 LinguaMatch est une application (avec et sans interface graphique) permettant d'automatiser le processus d'appariement entre adolescents hôtes/visiteur dans le cadre de séjours linguistiques...
 
-(Capture d'écran de l'interface graphique)
+![Exemple](example.png)
 
 **Avec LinguaMatch vous pourrez :**
 - Importer un fichier CSV avec un format bien précis contentant les informations et les critères des adolescents et gérer les éventuelles incohérences (type, valeur)
 - Trouver une solution sur les meilleurs appariements possibles pour tous les adolescents (si possible) via un algorithme d'affectation
 - Afficher la solution via une interface graphique qui permettra également de modifier les paramètres de l'algorithme pour guider la solution mais aussi d'exporter la solution au format CSV
-- Afficher les adolescents affectés nul part (toutes les contraintes n'ont pas été satisfaites comme les contraintes rédhibitoires)
 - Prendre en compte un historique des séjours des années précédentes pour une meilleure affectation des hôtes-visiteurs (cet historique est traité par sérialisation binaire)
+- Des logs basiques rapportant les erreurs dans la console (pour l'interface graphique) lors de l'importation d'un fichier CSV
 
 **Liens vers tous les rapports:**
 - [Rapport POO](#)
 - [Rapport Graphes](graphes/rapport.md)
 - [Rapport IHM](#)
-    - Compétence 5 "identifier les besoins métiers des clients et des utilisateurs" de R2.02
-    - Compétence 6 "identifier ses aptitudes pour travailler dans une équipe" de R2.02
 
 ### Release
 
 Vous retrouverez juste [ici](#) le fichier JAR avec toutes les classes compilées, il ne vous suffit que de lancer cette commande:
 
+**Version console** : Cette version montre un rapide aperçu du fonctionnement du logiciel et ne fait que le strict minimum (importation / exportation CSV ou sérialisation et calcul d'affectation)
+
+> Cette version dépend de 2 fichiers JAR, il faut donc (suivant le MANIFESt) le lancer depuis la racine du projet
+
 ```
-java -jar -cp [...] linguamatch_gui.jar
+java -jar linguamatch_console.jar
+```
+
+**Version graphique** : Cette version est la plus complète et fournit une interface graphique plus conviviale pour l'utilisateur
+
+```
+java --module-path [CHEMIN_ABSOLU_VERS_LE_DOSSIER_LIB_DE_JAVAFX_SDK_17.0.2] --add-modules javafx.controls,javafx.fxml -jar linguamatch.jar
 ```
 
 ### Configurer le projet
 
+Si vous voulez manipuler le logiciel depuis le code source, vous devez le configurer...
+
 Vous devez configurer le buildpath car ce n'est pas le même chemin selon chaque utilisateur
 
 Dans [.vscode/settings.json](.vscode/settings.json):
+
 ```json
 "java.project.referencedLibraries": [
     "CHEMIN_ABSOLU_VERS_LE_DOSSIER_LIB_DE_JAVAFX_SDK_17.0.2/*.jar",
@@ -65,7 +76,7 @@ Pour générer la documentation Javadoc en local
 > Le fichier 'package-info.java' présent dans l'arborescence sert à documenter chaque package du projet
 
 ```
-javadoc -author -d doc -cp lib/sae2_02.jar:lib/jgrapht-core-1.5.1.jar -sourcepath src -subpackages LinguaMatch 
+javadoc -author -d doc -cp lib/sae2_02.jar:lib/jgrapht-core-1.5.1.jar --module-path [CHEMIN_ABSOLU_VERS_LE_DOSSIER_LIB_DE_JAVAFX_SDK_17.0.2] --add-modules javafx.controls,javafx.fxml -sourcepath src -subpackages LinguaMatch
 ```
 
 La page principale se trouve dans ``doc/LinguaMatch/package-summary.html``
